@@ -2,15 +2,22 @@ package is.cityreportsystem.services.implementations;
 
 import is.cityreportsystem.DAO.EventImageDAO;
 import is.cityreportsystem.model.EventImage;
+import is.cityreportsystem.model.ReportImage;
 import is.cityreportsystem.services.EventImageService;
 import jakarta.transaction.Transactional;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
+import java.io.File;
 import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 
 @Transactional
 @Service
 public class EventImageServiceImpl implements EventImageService {
+    @Value("${images.repository}")
+    private String imagesRepo;
     private EventImageDAO eventImageDAO;
 
     public EventImageServiceImpl(EventImageDAO eventImageDAO){
@@ -18,13 +25,13 @@ public class EventImageServiceImpl implements EventImageService {
     }
     public byte[] getImageById(long id){
         EventImage image=eventImageDAO.findById(id).get();
-        InputStream is=getClass().getClassLoader().getResourceAsStream(image.getName());
-        try {
-            return is.readAllBytes();
-        }
-        catch(Exception e){
+        String path=imagesRepo+ File.separator+image.getName();
+        try{
+            byte[] result= Files.readAllBytes(Paths.get(path));
+            return result;
+        }catch(Exception e){
             e.printStackTrace();
+            return null;
         }
-        return null;
     }
 }
